@@ -36,6 +36,9 @@ xxx
     can be specified more easily. Added to help resolve a problem
     when using Perdition with Solaris 8 + Netscape 4 + Cyrus IMAPD
     discovered by Cristalle Azundris Sabon <cristalle@azundris.com>
+  - Fixed problem with quit() segfaulting on solaris and others.
+    This caused perdition to exit if an authentication error occured
+    in pop3 mode
 
 
 
